@@ -3,8 +3,8 @@
 
 	<data>
 		<key>content</key>
-		<version>5.0.15</version>
-        <lastMod>2013-01-02</lastMod>
+		<version>5.0.16</version>
+        <lastMod>2013-01-23</lastMod>
 
 		<name><![CDATA[Contenu]]></name>
 		<description><![CDATA[Gérer les pages de votre site internet, les catégories.]]></description>
